# CryptoTradingInfra

./: .gitmodules  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  execution_engine.cpp  execution_engine.hpp  main.cpp
data/: CMakeLists.txt  market_update.hpp  order_book.cpp  order_book.hpp
tests/: CMakeLists.txt  test_benchmark_ring_buffer.cpp  test_entries.hpp  test_execution_engine.cpp  test_main.cpp  test_market_updates_recv.cpp  test_order_book.cpp  test_ring_buffer.cpp  udp_market_client.py
toolchains/: homebrew-llvm-toolchain.cmake
utils/: CMakeLists.txt  Lock-Free MPMC Ring Buffer Design.md  math.hpp  network.hpp  ring_buffer.hpp
